--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -63,4 +63,11 @@ server {
 		auth_basic "Restricted Content";
 		auth_basic_user_file /etc/nginx/.htpasswd;
 	}
+
+		location /admin {
+		include uwsgi_params;
+		uwsgi_pass unix:$uwsgi_socket;
+		auth_basic "Restricted Content";
+		auth_basic_user_file /etc/nginx/.htpasswd;
+	}
 }
